--- a/pages/zvenyhorodskyi.html
+++ b/pages/zvenyhorodskyi.html
@@ -35,34 +35,33 @@
   <main class="main">
     <div class="container">
 
+      <div class="section-header">
+        <img src="../img/composite-path.png" alt="Bondi Servises" class="section-heading-picture">
+        <h2 class="section-header-title">We are Good at</h2>
+        <p class="section-header-description">SOME OF THEASE STUFF UNDER</p>
+        <hr class="section-header-bottom-line">
+      </div>
+
       <!--Servises Section-->
       <section class="servises">
-        <div class="design-element">
-          <img src="../img/composite-path.png" alt="Bondi Servises" class="design-element-png">
-        </div>
-        <div class="section-header">
-          <h2 class="section-header-title">We are Good at</h2>
-          <p class="section-header-description">SOME OF THEASE STUFF UNDER</p>
-          <img src="../img/line.png" alt="Line" class="section-header-line">
-        </div>
-        <div class="servises-content-block">
-          <div class="servises-content grafic-design">
-            <img src="../img/one.png" alt="Figure One" class="figure">
-            <img src="../img/pencil-icon.png" alt="Pencil" class="icon">
-            <h3 class="servises-content-title">GRAPHIC DESIGN</h3>
-            <p class="servises-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
+        <div class="servises-content-blocks">
+          <div class="services-content-block services-content-graphic-design">
+            <img src="../img/one.png" alt="Figure One" class="services-content-figure">
+            <img src="../img/pencil-icon.png" alt="Pencil" class="services-content-icon">
+            <h3 class="services-content-title">GRAPHIC DESIGN</h3>
+            <p class="services-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
           </div>
-          <div class="servises-content web-design">
-            <img src="../img/two.png" alt="Figure Two" class="figure">
-            <img src="../img/monitor-icon.png" alt="Monitor" class="icon">
-            <h3 class="servises-content-title">WEB DESIGN</h3>
-            <p class="servises-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
+          <div class="services-content-block services-content-web-design">
+            <img src="../img/two.png" alt="Figure Two" class="services-content-figure">
+            <img src="../img/monitor-icon.png" alt="Monitor" class="services-content-icon">
+            <h3 class="services-content-title">WEB DESIGN</h3>
+            <p class="services-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
           </div>
-          <div class="servises-content app-design">
-            <img src="../img/three.png" alt="Figure Three" class="figure">
-            <img src="../img/rosette-icon.png" alt="Rosette" class="icon">
-            <h3 class="servises-content-title">APP DESIGN</h3>
-            <p class="servises-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
+          <div class="services-content-block services-content-app-design">
+            <img src="../img/three.png" alt="Figure Three" class="services-content-figure">
+            <img src="../img/rosette-icon.png" alt="Rosette" class="services-content-icon">
+            <h3 class="services-content-title">APP DESIGN</h3>
+            <p class="services-content-description">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
           </div>
         </div>
       </section>
