--- a/pages/olya.html
+++ b/pages/olya.html
@@ -8,27 +8,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" re l="stylesheet">
 </head>
 <body>
-  <div class="container-3">
-    <div class="container-3-part-1">
-      <img src="../img/Composite_Path.png" alt="Composite Path" class="image-composite-path">
-      <h2>Some Stuff About Us</h2>
-      <h5>THE GREAT TEAM</h5>
-      <img src="../img/Path.png" alt="Path" class="image-path">
-      <p>Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
-    </div>
-    <div class="container-3-part-2">
-      <div class="container-3-part-2-left">
-        <h2>Retina Design</h2>
-        <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.<br><br>
-         Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
-        <button class="container-3-part-2-button button-main">OREDER ME ONE</button>
-      </div>
-      <div class="container-3-part-2-right">
-        <img src="../img/Vector_MacBook.png" alt="Vector MacBook" class="image-macbook">
-        <img src="../img/Screen.png" alt="Screen" class="image-screen">
-      </div>
-    </div>
-  </div>
+  <section class="about-us">
+    <div class="container">
+        <img src="../img/Composite_Path.png" alt="Composite Path" class="about-us-logo">
+        <h2 class="about-us-title">Some Stuff About Us</h2>
+        <h3 class="about-us-subtitle">THE GREAT TEAM</h3>
+        <hr class="about-us-line">
+        <p class="about-us-description">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+        
+        <div class="about-us-content">
+         <div class="about-us-info">
+           <h2 class="about-us-info-title">Retina Design</h2>
+           <p class="about-us-info-p">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.<br><br>
+           Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+           <button class="about-us-button button-main">OREDER ME ONE</button>
+         </div>
+         <div class="about-us-picture">
+           <img src="../img/Vector_MacBook.png" alt="Vector MacBook" class="about-us-picture-macbook">
+           <img src="../img/Screen.png" alt="Screen" class="about-us-picture-screen">
+         </div>
+       </div>
+     </div>
+  </section>
+
   
 </body>
 </html>
