The third part of Bondi: the last correction

--- a/pages/olya.html
+++ b/pages/olya.html
@@ -19,7 +19,7 @@
         <div class="about-us-content">
          <div class="about-us-info">
            <h2 class="about-us-info-title">Retina Design</h2>
-           <p class="about-us-info-p">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.<br><br>
+           <p class="about-us-info-description">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.<br><br>
            Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
            <button class="about-us-button button-main">OREDER ME ONE</button>
          </div>
@@ -30,7 +30,5 @@
        </div>
      </div>
   </section>
-
-  
 </body>
 </html>
