--- a/pages/lysachenko.html
+++ b/pages/lysachenko.html
@@ -8,44 +8,46 @@
   <title>Bondi Landind Page</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header-container">
-        <h1 class="header-container-title">Meet the Team</h1>
-        <p class="header-container-text">Donec ruturn congue leo eget malesauda. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin 
+  <header>
+      <div class="header">
+        <h1 class="header-title">Meet the Team</h1>
+        <p class="header-text">Donec ruturn congue leo eget malesauda. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin 
         <br>eget tortor risus. Donec sollicitudin molestie malesuada </p>
       </div>
-    </div>
   </header>
-
-  <main class="main">
-    <div class="flex-container">
-      <h2 class="flex-container-text">Luke Skywalker</h2>
-      <p class="container-text">"I don`t uderstand how we got 
-      <br>by those troops.I thought we 
-      <br> were dead"</p>
+  
+  <main>
+    <section class="team">
+    <div class="container">
+      <div class="team-member">
+        <h2 class="team-member-title">Luke Skywalker</h2>
+        <p class="team-member-description">"I don`t uderstand how we got  
+        <br>by those troops.I thought we 
+        <br> were dead"</p>
+      </div>
+      <div class="team-member">
+        <h2 class="team-member-title">Obi-Wan Kenobi</h2>
+        <p class="team-member-description">"Your clones are very impre-
+        <br>sive. You must be very proud"</p>
+      </div>
+      <div class="team-member">
+        <h2 class="team-member-title">Princess Leia</h2>
+        <p class="team-member-description">"I don`t know who you are or 
+        <br> where you came from,but from 
+        <br> now on you`ll do as I tell you, 
+        <br> okay?"</p>
+      </div>
+      <div class="team-member">
+        <h2 class="team-member-title">Yoda</h2>
+        <p class="team-member-description">"Do not assume anything Obi-
+        <br>Wan. Clear your mind must be if 
+        <br>you are to discover tre real 
+        <br>villians behind this plot."</p>
+      </div>
     </div>
-    <div class="flex-container">
-      <h2 class="flex-container-text">Obi-Wan Kenobi</h2>
-      <p class="container-text">"Your clones are very impre-
-      <br>sive. You must be very proud"</p>
-    </div>
-    <div class="flex-container">
-      <h2 class="flex-container-text">Princess Leia</h2>
-      <p class="container-text">"I don`t know who you are or 
-      <br> where you came from,but from 
-      <br> now on you`ll do as I tell you, 
-      <br> okay?"</p>
-    </div>
-    <div class="flex-container">
-      <h2 class="flex-container-text">Yoda</h2>
-      <p class="container-text">"Do not assume anything Obi-
-      <br>Wan. Clear your mind must be if 
-      <br>you are to discover tre real 
-      <br>villians behind this plot."</p>
-    </div>
+    </section>
   </main>
-
+  
   <footer class="footer">
     <img class="image-footer" src="../img/picture1.png" alt="Montreal Picture">
     <img class="image-footer" src="../img/picture2.png" alt="LAB Picture">
